--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,17 @@ h6 {
   font-family: 'Englebert', serif;
 }
 
+button {
+  cursor: pointer !important;
+}
+
+section {
+  @apply max-lg:px-4;
+}
+
+.map-li {
+}
+
 .MonsieurLaDoulaise {
   font-family: 'Monsieur La Doulaise', serif;
 }
@@ -38,4 +49,31 @@ h6 {
 
 .page-description {
   @apply text-sm;
+}
+
+/* Responsive Google Maps Embed */
+.embed-map-responsive {
+  position: relative;
+  text-align: right;
+  width: 100%;
+  height: 0;
+  padding-bottom: 66.66666666666666%;
+}
+
+.embed-map-container {
+  overflow: hidden;
+  background: none !important;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.embed-map-frame {
+  width: 100% !important;
+  height: 100% !important;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
